@@ -56,123 +56,6 @@ return *this ;
 }
 */
 
-//
-// Read the Molecular data from input stream.
-//
-bool Reaction::InitializeReaction(PersistPtr ppReac)
-{
-    m_ppPersist = ppReac;
-
-    Molecule* pMol1(NULL) ;
-    Molecule* pMol2(NULL) ;
-
-    //Read reactants
-    PersistPtr ppReactant1  = ppReac->XmlMoveTo("reactant");
-    pMol1 = GetMolRef(ppReactant1);
-    if(!pMol1) return false;
-    PersistPtr ppReactant2  = ppReactant1->XmlMoveTo("reactant");
-    if(ppReactant2)
-    {
-        pMol2 = GetMolRef(ppReactant2);
-        if(!pMol2){
-            {string errorMsg = "Reactant 2 defined in Reaction " + m_Name + " is incomplete.";
-            meErrorLog.ThrowError(__FUNCTION__, errorMsg, obError);}
-            return false;
-        }
-    }
-
-    //Put the CollidingMolecule into m_rct1, even if it is second in datafile
-    CollidingMolecule* pColMol = dynamic_cast<CollidingMolecule*>(pMol1);
-    if(pColMol){
-        m_rct2 = dynamic_cast<ModelledMolecule*>(pMol2);
-    }
-    else{
-        pColMol = dynamic_cast<CollidingMolecule*>(pMol2);
-        if(!pColMol){
-            meErrorLog.ThrowError(__FUNCTION__, string("At least one of the reactants has to be a colliding molecule"), obError);
-            return false;
-        }
-        m_rct2 = dynamic_cast<ModelledMolecule*>(pMol1);
-    }
-    m_rct1 = pColMol;
-
-    if (m_rct1 && m_rct2){ // the reactant side has two molecules
-        {stringstream errorMsg;
-        errorMsg << "Reaction " << m_Name << " has two reactants. ";
-        meErrorLog.ThrowError(__FUNCTION__, errorMsg.str(), obInfo);}
-
-        // check whether there is any SuperMolecule in m_molmap contains pMol1 & pMol2
-        string id; //shoud not set any name for it.
-        SuperMolecule* pSupMol = NULL;
-        while(m_pMoleculeManager->GetNextMolecule(id, pSupMol)){ // get next SuperMolecule
-            // if found a SuperMolecule
-            ModelledMolecule*  rm1 = pSupMol->getMember1();
-            ModelledMolecule*  rm2 = pSupMol->getMember2();
-            if (!rm1 && !rm2){// there is no data inside, occupy it!
-                pSupMol->setMembers(m_rct1, m_rct2);
-                m_srct = pSupMol;
-                {stringstream errorMsg;
-                errorMsg << "Set members of the SuperMolecule: " << m_srct->getName();
-                meErrorLog.ThrowError(__FUNCTION__, errorMsg.str(), obInfo);}
-                break;
-            }
-        }
-        if (!pSupMol){
-            meErrorLog.ThrowError(__FUNCTION__, string("No SuperMolecule was found."), obInfo);
-            // there will always at least one SuperMolecule in m_molmap, check the end of addmol()
-            // in MoleculeManager.cpp.
-            /* need to create one (mark _2007_12_10__17_10_18_)
-            write a SuperMolecule creator that acquire a position in the XML
-            */
-        }
-    }
-    else{
-        string errorMsg = "Reaction " + m_Name + " has only one reactant";
-        meErrorLog.ThrowError(__FUNCTION__, errorMsg, obInfo);
-    }
-
-    //Read products ... if any.
-    pMol1=pMol2=NULL;
-    PersistPtr ppProduct1 = ppReac->XmlMoveTo("product");
-    if (ppProduct1) {
-        pMol1 = GetMolRef(ppProduct1);
-
-        PersistPtr ppProduct2  = ppProduct1->XmlMoveTo("product");
-        pMol2 = GetMolRef(ppProduct2);
-
-        //Put the Colliding Molecule into m_pdt1, even if it is second in datafile
-        pColMol = dynamic_cast<CollidingMolecule*>(pMol1);
-        if(pColMol)
-        {
-            m_pdt1 = pColMol ;
-            m_pdt2 = dynamic_cast<ModelledMolecule*>(pMol2);
-        }
-        else
-        {
-            pColMol = dynamic_cast<CollidingMolecule*>(pMol2);
-            if(!pColMol) { // both products are not CollidingMolecule -> dissociation reaction
-                m_pdt1 = dynamic_cast<CollidingMolecule*>(pMol1);
-                m_pdt2 = dynamic_cast<ModelledMolecule*>(pMol2); // do we need to check the existence of m_pdt2 ?
-            } else {
-                m_pdt1 = pColMol ;
-                m_pdt2 = dynamic_cast<ModelledMolecule*>(pMol1);
-            }
-        }
-    }
-
-    // Read the transition state (if present)
-    PersistPtr ppTransitionState = ppReac->XmlMoveTo("me:transitionState") ;
-    if (ppTransitionState)
-    {
-        TransitionState* pTrans = dynamic_cast<TransitionState*>(GetMolRef(ppTransitionState));
-        if(pTrans) m_TransitionState = pTrans;
-    }
-
-    // Read heat of reaction and rate parameters.
-
-    return ReadRateCoeffParameters(ppReac) ;
-}
-
 
 //
 // Locate molecule in molecular map.
@@ -270,49 +153,6 @@ bool Reaction::ReadRateCoeffParameters(PersistPtr ppReac) {
     return true ;
 }
 
-
-//
-// Calculate reaction equilibrium constant.
-//
-double Reaction::calcEquilibriumConstant() {
-    // equilibrium constant:
-
-    double Keq(0.0) ;
-
-    // Get Canonical partition functions.
-
-    double Qrcts = 1.0;
-    if (m_rct2)
-        Qrcts = m_srct->grnCanPrtnFn();
-    else
-        Qrcts = m_rct1->grnCanPrtnFn() ;
-
-    double Qpdt1 = m_pdt1->grnCanPrtnFn() ;
-
-    double mass_rct1 = m_rct1->getMass();
-    double mass_rct2 = (m_rct2)? m_rct2->getMass() : 0.0;
-    double mass_srct = mass_rct1 + mass_rct2;
-
-    // Calculate the equilibrium constant.
-    double beta = getEnv().beta ;
-
-    Keq = Qpdt1/Qrcts ;
-    if(debugFlag) ctest << "Keq = " << Keq << endl;
-
-    /* Electronic degeneracies were already accounted for in DOS calculations */
-    // Heat of reaction
-    Keq *= exp(-beta * m_HeatOfReaction * kJPerMolInRC) ;
-    if(debugFlag) ctest << "Keq = " << Keq << endl;
-
-    // Translational contribution
-    // 2.0593e19 = conversion factor,  1e-6*(((cm-1 -> j)/(h2*na)))^3/2
-    // double tau = 2.0593e19 * pow(2. * M_PI ,1.5);
-    if (m_rct2)
-        Keq /= (tp_C * pow(mass_rct1 * mass_rct2 / (mass_srct * beta), 1.5));
-
-    if(debugFlag) ctest << "Keq = " << Keq << endl;
-    return Keq ;
-}
 
 //
 // Access microcanoincal rate coefficients.
